fix mobile overflow

--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ h1, h2, h3, h4, h5 {
     align-items: center;
 }
 @media (max-width:768px){
+    .hero{
+        min-height: 40vh;
+        padding:60px 0;
+    }
 .hero h1{
     font-size:1.6rem;
 }
